=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.1
 - Fixed: Corrected Tag exclusion on Filtering when finding Shared Notes (Thanks Greg) (windmillway)
 - Fixed: Enabled Filtering when finding Shared Notes (Find.php) (Just a pending email to Greg on tag exclusion) (windmillway)
 - Fixed: Error to $factarray caused by previous update svn5132 (windmillway)
 - Added: Admin page, Add "unlinked note" and reorganised sections.(Thanks for the code Nigel). Added: various Help Texts for Shared Notes. (windmillway)
 - Changed: added missing Shared Note icon references to Xenea Theme (windmillway)
 - Added: Sour Tag for shared Notes on note.php page(windmillway)
 - Added: Shared Notes (or Linked Notes) support (windmillway)
 - Fixed: [ 2637256 ] Extended Relatives Report Header Overwritten (wooc)
 - Fixed: [ 2639453 ] Place check indicating X is difficult to tell the colour (fisharebest)
 - Changed: Add option to sort Manage Media list and MultiMedia list (canajun2eh)
 - Fixed: [ 2612938 ] 4.2.1 svn rev.5059 - Translation error (fisharebest)
 - Fixed: [ 2608286 ] Copy EVENT causes error in option field (fisharebest)
 - Fixed: [ 2556004 ] 4.2.0 - Reports without data output (fisharebest)
 - Fixed: [ 2562498 ] 4993 General Search - last change (fisharebest)
 - Fixed: [ 2555000 ] 4.2 Anniversary Calendar no privacy rules (fisharebest)
 - Added: [ 2522082 ] Go To Merged Record (fisharebest)
 - Added: [ 2580275 ] 4.2 R.A. improved functionality for Autosearch on Ancestry (erostew/fisharebest)
 - Fixed: [ 2567372 ] Admin does not always see changes to approve correctly (fisharebest)
 - Fixed: [ 2328664 ] Research Assistent (fisharebest)
 - Added: Support for Serbian (Latin alphabet) (canajun2eh)